更新処理塊なくなる！

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -36,7 +36,7 @@
                     class: "btn btn-danger" %></td>
         </tr>
       <% end %>    
-      <%= link_to "利用者追加", new_client_path, class: "btn btn-success" %>
+      <%= link_to "利用者追加", new_client_path, class: "btn btn-success",data: {"turbolinks" => false} %>
     </tbody>
   </table>  
          
