--- a/app/views/monitorings/monitoring_basic_info_affter.html.erb
+++ b/app/views/monitorings/monitoring_basic_info_affter.html.erb
@@ -20,7 +20,7 @@
     
     <tr>  
       <td align="center"><%= f.label "［他者交流］", class: "label-#{yield(:class_text)}" %>
-      <br><%= f.radio_button :monitoring_exchange, "保たれている", checked: "checked" %>
+      <br><%= f.radio_button :monitoring_exchange, "保たれている" %>
       <%= f.label "保たれている", class: "label-#{yield(:class_text)}" %>
       <%= f.radio_button :monitoring_exchange, "ほぼ保たれている" %>
       <%= f.label "ほぼ保たれている", class: "label-#{yield(:class_text)}" %>
@@ -34,14 +34,14 @@
         <br><%= f.label "［送迎］", class: "label-#{yield(:class_text)}" %></br>
             <%= f.radio_button :monitoring_go_to_home, "問題あり" %>
             <%= f.label "問題あり", class: "label-#{yield(:class_text)}" %>
-            <%= f.radio_button :monitoring_go_to_home, "問題なし", checked: "checked" %>
+            <%= f.radio_button :monitoring_go_to_home, "問題なし" %>
             <%= f.label "問題なし", class: "label-#{yield(:class_text)}" %>
        
         
         
         <!--歩行-->
         <br><%= f.label "［歩行］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button :monitoring_walking, :自立, checked: "checked" %>
+        <br><%= f.radio_button :monitoring_walking, :自立 %>
       <%= f.label "自立", class: "label-#{yield(:class_text)}" %> 
       <%= f.radio_button :monitoring_walking, :見守り%>
       <%= f.label "見守り", class: "label-#{yield(:class_text)}" %>
@@ -54,16 +54,16 @@
          
          <!--食事-->
         <br><%= f.label "［食事］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button  :monitoring_eating, :自立, checked: "checked" %>
+        <br><%= f.radio_button  :monitoring_eating, :自立 %>
       <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button  :monitoring_eating, :一部介助, checked: "checked" %>
+      <%= f.radio_button  :monitoring_eating, :一部介助 %>
       <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button  :monitoring_eating, :全介助, checked: "checked" %>
+      <%= f.radio_button  :monitoring_eating, :全介助 %>
       <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
         
         <!--参加状況-->
         <br><%= f.label "［参加状況］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button  :monitoring_situation_of_participation, :毎回実施, checked: "checked" %>
+        <br><%= f.radio_button  :monitoring_situation_of_participation, :毎回実施 %>
         <%= f.label "毎回実施", class: "label-#{yield(:class_text)}" %>
         <%= f.radio_button  :monitoring_situation_of_participation, :ほぼ毎回実施 %>
         <%= f.label "ほぼ毎回実施", class: "label-#{yield(:class_text)}" %>
@@ -74,7 +74,7 @@
         
         <!--入浴-->
         <br><%= f.label "［入浴］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button :monitoring_both, :自立, checked: "checked" %>
+        <br><%= f.radio_button :monitoring_both, :自立 %>
         <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
         <%= f.radio_button :monitoring_both, :一部介助 %>
         <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
@@ -82,11 +82,11 @@
         <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
         
         <br><%= f.label "皮膚トラブル" , class: "label-#{yield(:class_text)}" %>
-        <br><%= f.text_area :monitoring_both, class: "hoge", size: "70x3" %>
+        <br><%= f.text_area :monitoring_both_truble, class: "hoge", size: "70x3" %>
         
         <!--更衣-->
          <br><%= f.label "［更衣］", class: "label-#{yield(:class_text)}" %>
-         <br><%= f.radio_button :monitoring_changing_clothes, :自立, checked: "checked" %>
+         <br><%= f.radio_button :monitoring_changing_clothes, :自立 %>
         <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
         <%= f.radio_button :monitoring_changing_clothes, :一部介助 %>
         <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
@@ -95,7 +95,7 @@
         
         <!--社会参加-->
         <br><%= f.label"［社会参加］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button :monitoring_community, :参加している, checked: "checked" %>
+        <br><%= f.radio_button :monitoring_community, :参加している %>
         <%= f.label "参加している", class: "label-#{yield(:class_text)}" %>
         <%= f.radio_button :monitoring_community, :参加していない %>
         <%= f.label "参加していない", class: "label-#{yield(:class_text)}" %>
@@ -103,7 +103,7 @@
         <%= f.label "実施なし", class: "label-#{yield(:class_text)}" %>
         
         <br><%= f.label "社会参加しているもの", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.text_area :monitoring_community, class: "hoge",size: "70x1" %>
+        <br><%= f.text_area :monitoring_community_what, class: "hoge", size: "70x3" %>
         
         <!--利用状況-->
         <br><%= f.label "［利用状況］", class: "label-#{yield(:class_text)}" %>
@@ -112,7 +112,7 @@
         <%= f.radio_button :monitoring_situation_dey, :休んだ日がある %>
         <%= f.label "休んだ日がある", class: "label-#{yield(:class_text)}" %>
         <br><%= f.label "休んだ日がある理由" , class: "label-#{yield(:class_text)}" %>
-        <br><%= f.text_area :monitoring_situation_dey, class: "hoge", size: "70x3" %>
+        <br><%= f.text_area :monitoring_vacation_dey_buy, class: "hoge", size: "70x3" %>
         
       </td>
     </tr>
@@ -130,15 +130,15 @@
           
           <br><%= f.radio_button :monitoring_service_need, :必要あり %>
               <%= f.label "必要あり", class: "label-#{yield(:class_text)}" %>
-              <%= f.radio_button :monitoring_service_need, :必要なし, checked: "checked" %>
+              <%= f.radio_button :monitoring_service_need, :必要なし%>
               <%= f.label "必要なし", class: "label-#{yield(:class_text)}" %>
           <br><%= f.label "必要あり理由", class: "label-#{yield(:class_text)}" %>
-              <br><%= f.text_area :monitoring_service_need, class: "hoge", size: "70x3" %>
+              <br><%= f.text_area :monitoring_service_need_what, class: "hoge", size: "70x3" %>
           <br><%= f.label "確認", class: "label-#{yield(:class_text)}" %>
-              <%= f.check_box :check_monitoring, {checked: false}, "true", "false" %>
-          <br><%= f.submit "編集", class: "btn btn-success " %>
+              <%= f.check_box :check_monitoring, {checked: true}, "true", "false" %>
+          <br><%= f.submit "追加", class: "btn btn-primary "  %>
         </td>
-      <% end %>  
+      <% end %>   
     </table>
     <%= link_to "削除", monitoring_delete_client_monitoring_path(@client, @monitoring), method: :delete,
                     data: { confirm: "削除してよろしいですか？" },
