--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -29,7 +29,8 @@
           <td class="center"><%= client.nursing_number %></td>
           <td class="center"><%= client.date_of_day %></td>
           <td class="center"><%= client.sex %></td>
-          <td class="center"><%= client.client_birthday.strftime("%F")if client.client_birthday.present? %></td>
+          <td class="center"><%= client.client_birthday.strftime("%F")if client.client_birthday.present? %>
+                              <%= age(client_birthday) %></td>
           <td class="center"><%= link_to "詳細",client_path(client),class: "btn btn-primary" %></td>
           <td class="center"><%= link_to "退所",client_path(client), method: :delete,
                     data: { confirm: "削除してよろしいですか？" },
