--- a/app/views/staffs/_staff.html.erb
+++ b/app/views/staffs/_staff.html.erb
@@ -7,6 +7,9 @@
   <%= f.label :email, class: "label-#{yield(:class_text)}" %>
   <%= f.email_field :email, class: "form-control" %>
 
+  <%= f.label "電話番号", class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :cellphone, class: "form-control" %>
+
  
   
   <%= f.submit :編集する, class: "btn btn-primary btn-block btn- active btn-#{yield(:class_text)}" %>
