--- a/app/views/businesslogs/clients_index.html.erb
+++ b/app/views/businesslogs/clients_index.html.erb
@@ -87,6 +87,6 @@
 							
 			<% end %>
 		<% end %>
-		<br><%= f.submit "追加", class: "btn btn-primary " %>
+		<br><%= f.submit "終了", class: "btn btn-primary " %>
 	<% end %>
 </div>					
