--- a/app/views/clients/businesslog_clients.html.erb
+++ b/app/views/clients/businesslog_clients.html.erb
@@ -1,27 +1,28 @@
 <div class="center">
   <h1>本日の利用チェック</h1>
-	<%= link_to "本日の業務日誌一覧記入", businesslogs_clients_index_path, local: true, method: :get %>
-	<table class="table table-bordered table-condensed table-hover" id="table-clientes">
-		 <thead>
-      <tr>
-        <th class= "center">本日利用チェック</th>
-        <th class="center">利用者名</th>
-				<th class="center">利用曜日</th>
-        <th class="center">詳細</th>
-			</tr>
-			<%= form_with( model: @clients, url: update_businesslog_client_now_client_path(@clients), local: true, method: :patch) do |f| %>
-					<% @clients.each do |client| %>
-						<%= f.fields_for "clients[]", client do |a| %> 
-							<tbody>
-								<tr>
-									<td><%= a.check_box :use_check, {}, "true", "false" %></td>
-									<td class= "center"><%= client.client_name %></td>
-									<td class= "center"><%= client.date_of_day %></td>
-									<td class="center"><%= link_to "詳細",client_path(client),class: "btn btn-primary" %></td>
-								</tr>
-							</tbody>
-						<% end %>
+	<%= link_to "本日の業務日誌一覧", businesslogs_clients_index_path, local: true, method: :get, class: "btn btn-primary" %>
+		<%= form_with( model: @clients, url: update_businesslog_client_now_client_path(@clients), local: true, method: :patch) do |f| %>
+			<table class="table table-bordered table-condensed table-hover" id="table-clientes">
+				<thead>
+					<tr>
+						<th class= "center">本日利用チェック</th>
+						<th class="center">利用者名</th>
+						<th class="center">利用曜日</th>
+						<th class="center">詳細</th>
+					</tr>
+				</thead>	
+				<% @clients.each do |client| %>
+					<%= f.fields_for "clients[]", client do |a| %> 
+						<tbody>
+							<tr>
+								<td><%= a.check_box :use_check, {}, "true", "false" %></td>
+								<td class= "center"><%= client.client_name %></td>
+								<td class= "center"><%= client.date_of_day %></td>
+								<td class="center"><%= link_to "詳細",client_path(client),class: "btn btn-primary" %></td>
+							</tr>
+						</tbody>
 					<% end %>
-				<br><%= f.submit "追加", class: "btn btn-primary " %>
-			<% end %>	
-		</table>				
+				<% end %>
+			</table>				
+		<br><%= f.submit "本日利用！！", class: "btn btn-primary " %>
+		<% end %>	
