--- a/app/views/asesments/asesment_completion.html.erb
+++ b/app/views/asesments/asesment_completion.html.erb
@@ -163,9 +163,9 @@
             医師&emsp;【<%= @asesment.hospital_doctor %>】
             ℡&emsp;【<%= @asesment.hospital_doctor_nymber %>】
           <br>かかりつけ医
-          &emsp;【<%= @asesment.hospital_name %>】
-            医師&emsp;【<%= @asesment.hospital_doctor %>】
-            ℡&emsp;【<%= @asesment.hospital_doctor_nymber %>】</th>    
+          &emsp;【<%= @asesment.hospital_name_1 %>】
+            医師&emsp;【<%= @asesment.hospital_doctor_1 %>】
+            ℡&emsp;【<%= @asesment.hospital_doctor_nymber_1 %>】</th>    
       </tr>
       <tr>
         <th>医師の指示注意事項</th>  
