--- a/app/views/asesments/asesment_new.html.erb
+++ b/app/views/asesments/asesment_new.html.erb
@@ -162,9 +162,9 @@
             医師&emsp;<%= f.text_area :hospital_doctor, class: "hoge", size: "20x1" %>
             ℡&emsp;<%= f.text_area :hospital_doctor_nymber, class: "hoge", size: "20x1" %>
           <br>かかりつけ医
-          &emsp;<%= f.text_area :hospital_name, class: "hoge", size: "20x1" %>
-            医師&emsp;<%= f.text_area :hospital_doctor, class: "hoge", size: "20x1" %>
-            ℡&emsp;<%= f.text_area :hospital_doctor_nymber, class: "hoge", size: "20x1" %></th>    
+          &emsp;<%= f.text_area :hospital_name_1, class: "hoge", size: "20x1" %>
+            医師&emsp;<%= f.text_area :hospital_doctor_1, class: "hoge", size: "20x1" %>
+            ℡&emsp;<%= f.text_area :hospital_doctor_nymber_1, class: "hoge", size: "20x1" %></th>    
       </tr>
       <tr>
         <th>医師の指示注意事項</th>  
