--- a/app/views/clients/businesslog_clients.html.erb
+++ b/app/views/clients/businesslog_clients.html.erb
@@ -15,7 +15,7 @@
 					<%= f.fields_for "clients[]", client do |a| %> 
 						<tbody>
 							<tr>
-								<td><%= a.check_box :use_check, {}, "true", "false" %></td>
+								<td><%= a.check_box :use_check,  {checked: false}, "true", "false" %></td>
 								<td class= "center"><%= client.client_name %></td>
 								<td class= "center"><%= client.date_of_day %></td>
 								<td class="center"><%= link_to "詳細",client_path(client),class: "btn btn-primary" %></td>
