--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -30,6 +30,9 @@
           <td class="center"><%= client.date_of_day %></td>
           <td class="center"><%= client.sex %></td>
           <td class="center"><%= client.client_birthday.strftime("%F")if client.client_birthday.present? %>
+                              <% if client.client_birthday.present? %>
+                              <br>【<%= age(client.client_birthday) %>歳】
+                              <% end %>
                               </td>
           <td class="center"><%= link_to "詳細",client_path(client),class: "btn btn-primary" %></td>
           <td class="center"><%= link_to "退所",client_path(client), method: :delete,
