--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,5 +1,20 @@
 <h1>利用者一覧</h1>
+<div class="search-form">
+  <%= form_with(scope: :search, url: clients_path, method: :get, local: true) do |f| %>
+    <div class="field">
+      <%= f.label "名前", class: "label-#{yield(:class_text)}" %>
+      <%= f.text_field :client_name, value: @search_params[:client_name] %>
+    </div>
 
+    <div class="field">
+      <%= f.label "利用日", class: "label-#{yield(:class_text)}" %>
+      <%= f.text_field :date_of_day, value: @search_params[:date_of_day] %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "検索する" %>
+    </div>
+  <% end %>
 
   <table class="table table-bordered table-condensed table-hover" id="table-clientes">
     <thead>
@@ -29,7 +44,7 @@
           <td class="center"><%= client.nursing_number %></td>
           <td class="center"><%= client.date_of_day %></td>
           <td class="center"><%= client.sex %></td>
-          <td class="center"><%= client.client_birthday.strftime("%F")if client.client_birthday.present? %>
+          <td class="center"><%= client.client_birthday.strftime("%Y年%-m月%-d日")if client.client_birthday.present? %>
                               <% if client.client_birthday.present? %>
                               <br>【<%= age(client.client_birthday) %>歳】
                               <% end %>
