--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -17,6 +17,7 @@
       <% @monitorings.each do |monitoring| %>
         <br><%= link_to monitoring.monitoring_worked_on_year.strftime("%Y年")+monitoring.monitoring_worked_on_month.strftime("%m月"),monitoring_completion_client_monitoring_path(@client, monitoring),data: {"turbolinks" => false}, class: "btn btn-primary" %>
             <%= link_to "編集", monitoring_basic_info_affter_client_monitoring_path(@client, monitoring),data: {"turbolinks" => false}, class: "btn btn-success" %>又は削除も可能</br>
+            ↑コピー専用↑
       <% end %>
         <%= paginate(@monitorings) %>
         </td>
@@ -24,6 +25,7 @@
         <% @asesments.each do |asesment| %>
           <br><%= link_to asesment.asesment_create_year.strftime("%Y年")+asesment.asesment_create_day.strftime("%-m月%-d日"), asesment_completion_client_asesment_path(@client,asesment), class: "btn btn-primary" %>
           <%= link_to "編集", asesment_affter_client_asesment_path(@client, asesment), class: "btn btn-success" %>又は削除も可能</br>
+          ↑コピー専用↑
         <% end %>
         <%= paginate(@asesments) %>
         </td>
@@ -31,6 +33,7 @@
           <% @businesslogs.each do |log| %>
           <br><%= link_to log.log_year.strftime("%Y年")+log.log_month.strftime("%-m月%-d日"),businesslog_completion_client_businesslog_path(@client, log), class: "btn btn-primary" %>
           <%= link_to "編集", affter_businesslog_client_businesslog_path(@client, log), class: "btn btn-success"%>又は削除も可能</br>
+          ↑コピー専用↑
           <% end %>
           <%= paginate(@businesslogs) %>
           <br><%= link_to "業務日誌コピー専用ページ", businesslog_completion_copy_client_businesslog_path(@client, @businesslogs), class: "btn btn-info" %>
