--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -8,6 +8,8 @@
   <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
   <p>アカウント作成は<%= link_to "こちら", new_staff_path, class: "btn primary" %>から</p>
   <% end %>
+  <br>
+  <br><a href="https://lin.ee/BVjbJnS"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" height="36" border="0"></a>
 
 </div>
   
