--- a/app/views/businesslogs/clients_index.html.erb
+++ b/app/views/businesslogs/clients_index.html.erb
@@ -1,4 +1,4 @@
-<h1>本日の利用者業務日誌一覧</h1>
+<h1>本日の利用者個別記録一覧</h1>
 
 
 <div class="center">
@@ -84,7 +84,7 @@
 							<th class ="center" colspan= "2"><%= c.text_area :log_record_stamp, class: "hope", size: "4x1" %>
 							</th>	
 					</table>
-							<%= c.check_box :check_log ,{checked: true}, "true", "false" %>		
+						<%= c.check_box :check_log ,{checked: true}, "true", "false" %>		
 			<% end %>
 		<% end %>
 		<br><%= f.submit "終了", class: "btn btn-primary " %>
