--- a/app/views/asesments/asesment_affter.html.erb
+++ b/app/views/asesments/asesment_affter.html.erb
@@ -15,7 +15,7 @@
 <br>
 1.利用者
 <br>
-    <table align="center" cellspacing="0", cellpadding="5"  width="1000">>
+    <table align="center" cellspacing="0", cellpadding="5"  width="1000">
       <tr>
         <th class="parent" rowspan= "4">写真</th>
       </tr>
@@ -49,8 +49,8 @@
           <% end %>
         </th>  
       </tr>                                      
-    <!--</table>-->
-    <!--<table align="center" cellspacing="0", cellpadding="5">-->
+    </table>
+    <table align="center" cellspacing="0", cellpadding="5">
       <tr>
         <th colspan= "2"><%= f.label "住所", class: "label-#{yield(:class_text)}" %>
         &emsp;<%= @client.client_email %></th>
@@ -94,7 +94,7 @@
           <br><%= f.label "電話番号", class: "label-#{yield(:class_text)}" %>
           <br><%= f.text_area :relation_cellphone_3, class: "hoge", size: "15x1" %></th>
       </tr>
-    <!--</table>-->
+    </table>
     2.健康状態
     <table align="center">
       <tr>
