--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -8,6 +8,7 @@
         <tr>
           <th class="center">従業員</th>
           <th class="center">電話番号</th>
+          <th class="center">編集</th>
           <th class="center">削除</th>
         </tr>
       </thead>
@@ -18,6 +19,7 @@
             <%= staff.name %>
           </td>
           <td class="center"><%= staff.cellphone %></td>
+          <td class="center"><%= link_to "編集" ,edit_staff_path(staff), class: "btn btn-success"%></td>
           <td class="center"><%= link_to "削除", staff, method: :delete,
                   data: { confirm: "削除してよろしいですか？" },
                   class: "btn btn-primary" %></td>
