--- a/app/views/monitorings/monitoring_completion.html.erb
+++ b/app/views/monitorings/monitoring_completion.html.erb
@@ -4,8 +4,8 @@
     <h1>利用者情報報告書</h1>
     <%= form_with( model: @monitoring, url: create_monitoring_new_client_monitorings_path(@client, @monitoring), local: true, method: :post) do |f| %>
   <p><span class="under">利用者名: <%= @client.client_name %>様の
-    <%= f.date_select(:monitoring_worked_on_year, discard_month:true) %>年
-    <%= f.date_select(:monitoring_worked_on_month, discard_year:true, discard_day:true) %>
+    <%= @monitoring.monitoring_worked_on_year.strftime("%Y") if @monitoring.monitoring_worked_on_year.present? %>年
+    <%= @monitoring.monitoring_worked_on_month.strftime("%m")if @monitoring.monitoring_worked_on_month.present? %>月
     の利用者の状況をご報告いたします。
     </span></p>
   
@@ -133,9 +133,6 @@
               <%= f.label "必要なし", class: "label-#{yield(:class_text)}" %>
           <br><%= f.label "必要あり理由", class: "label-#{yield(:class_text)}" %>
               <br><%= f.text_area :monitoring_service_need_what, class: "hoge", size: "70x3" %>
-          <br><%= f.label "確認", class: "label-#{yield(:class_text)}" %>
-              <%= f.check_box :check_monitoring, {checked: true}, "true", "false" %>
-          <br><%= f.submit "追加", class: "btn btn-primary "  %>
         </td>
       <% end %>    
     </table>  
