--- a/app/views/staffs/edit.html.erb
+++ b/app/views/staffs/edit.html.erb
@@ -4,6 +4,24 @@
 <h1>アカウント情報の更新</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= render 'form' %>
+    <%= form_with(model: @staff, local: true  ) do |f| %>
+  <%= render 'shared/error_messages',  object: @staff %>
+
+  <%= f.label "名前", class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :name, class: "form-control" %>
+
+  <%= f.label :email, class: "label-#{yield(:class_text)}" %>
+  <%= f.email_field :email, class: "form-control" %>
+
+
+  <%= f.label "電話番号", class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :cellphone, class: "form-control" %>
+  
+  
+ 
+
+  <%= f.submit yield(:button_text), class: "btn btn-primary btn-block btn-#{yield(:class_text)}" %>
+<% end %>
+
   </div>
 </div>
