スタッフ修正

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,10 +9,15 @@
           <li><%= link_to "本日の利用者チェック",businesslog_clients_client_path(current_staff), data: {"turbolinks" => false} %></li>
           <li><%= link_to "従業員一覧", staffs_path %></li>
           <li class="dropdown">
-               <%= link_to "ログアウト", logout_path, method: :delete %>
-              </li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                アカウント<b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "プロフィール", current_staff %></li>
+              <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
             </ul>
-          </li>
+          </li>      
+      </ul>
         <% else %>
         <li><%= link_to "ログイン", login_path %></li>
         <% end %>
