--- a/app/views/staffs/_form.html.erb
+++ b/app/views/staffs/_form.html.erb
@@ -7,6 +7,8 @@
   <%= f.label :email, class: "label-#{yield(:class_text)}" %>
   <%= f.email_field :email, class: "form-control" %>
 
+  <%= f.label "所属", class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :attachment, class: "form-control" %>
 
   <%= f.label "電話番号", class: "label-#{yield(:class_text)}" %>
   <%= f.text_field :cellphone, class: "form-control" %>
