--- a/app/views/asesments/asesment_completion.html.erb
+++ b/app/views/asesments/asesment_completion.html.erb
@@ -16,7 +16,7 @@
 <br>
 1.利用者
 <br>
-    <table align="center" cellspacing="0", cellpadding="5">
+    <table align="center" cellspacing="0", cellpadding="5" width="100">
       <tr>
         <th class="parent" rowspan= "4">写真</th>
       </tr>
